--- a/src/app/styles/footer.module.css
+++ b/src/app/styles/footer.module.css
@@ -1,5 +1,10 @@
-.container-footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.footer {
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.text {
+  font-size: 0.8rem;
 }
