--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -1,5 +1,10 @@
-.container-header {
+.navbar {
   display: flex;
-  gap: 10px;
-  font-size: 5rem;
+  padding: 20px 10px;
+  gap: 50px;
+}
+.routes {
+  text-decoration: none;
+  font-size: 1.2rem;
+  color: white;
 }
