Changed colors and added a new page

--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -2,9 +2,14 @@
   display: flex;
   padding: 20px 10px;
   gap: 50px;
+  border-bottom: 2px solid white;
 }
 .routes {
   text-decoration: none;
   font-size: 1.2rem;
   color: white;
+}
+.routes:hover {
+  transform: translateY(-3px);
+  transition: transform 200ms ease-in, 400ms ease-out;
 }
