Changd all colors to black

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,14 @@
 html {
-  background: #020024;
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(9, 9, 121, 1) 12%,
-    rgba(5, 103, 183, 1) 65%,
-    rgba(0, 212, 255, 1) 100%
-  );
-  color: white;
+  background: black;
+  color: #f5fffa;
 }
 body {
   margin: 0;
-  padding: 0;
+  padding: 25px;
   height: 100%;
+  align-items: center;
   flex-direction: column;
   display: flex;
-  align-items: center;
   min-height: 100vh;
   position: relative;
 }
