--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -1,12 +1,18 @@
 .navbar {
+  align-items: center;
+  justify-content: center;
   display: flex;
-  padding: 20px 10px;
-  gap: 50px;
-  border-bottom: 2px solid white;
+  flex-direction: row;
+  padding: 20px 20px;
+  gap: 20px;
+  border: 2px solid white;
+  border-radius: 10px;
+  width: 40%;
+  position: fixed;
 }
 .routes {
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: white;
 }
 .routes:hover {
